# configurator

./: .envrc  .gitignore  .gitmodules  CHANGELOG.md  Distfiles  Dockerfile  LICENSE  Makefile  README.md  README.org  app.py  build-python  bundle-linux  components.py  compose.yml  config.py  configurator  docker-compose.yml  embeddings.py  eval_search.py  example.py  example.yml  firstrun.sh  generate.py  importer.py  ingestion.py  install  llm.py  loaded_documents.json  loaders.py  main.py  opt_config.json  package-common  package-linux  package-windows  pipeline.py  pyproject.toml  qdrant.py  qdrant_hybrid.py  rag_pipeline.py  (+13 more)
.github/workflows/: main.yml  test.yml
data/: get_repliqa_pdfs.py
drupal/: README.md  docker-compose.yml
learn2rag/: __main__.py  logging-debug.yml  logging.yml  ollama_tool.py  pipeline.py  services.py
learn2rag/compose/: README.org  __init__.py  __main__.py
learn2rag/compose/tests/: test_compose.py
learn2rag/compose/tests/data/: nonzero_exitcode.yml  zero_exitcode.yml
learn2rag/data/: __init__.py
learn2rag/evaluation/: README.org  docker-compose.yml  downloader.py  example.py  importer.py  ingester.py  tools.py  traditional_evaluation.py
learn2rag/importer/: __init__.py  __main__.py  main.py  readme.md
learn2rag/importer/config/: config.example.json  config.json  config_constants.py  logging.yaml
learn2rag/importer/loaders/: csv_loader.py  directory_loader.py  drupal_loader.py  html_loader.py  jira_loader.py  process_loaders.py  sharepoint_loader.py
learn2rag/importer/tests/: generate_test_documents.py  test_loaders.py
learn2rag/importer/tests/data/: advanced.md  event_logs.csv  product_inventory.csv  sample.csv  sample.html  sample.md  sample.txt  simple.md
learn2rag/importer/tests/data/html/: local_file.html
learn2rag/importer/utils/: config_loader.py  import_state.py  logging_setup.py  progress.py
learn2rag/optimization/: __init__.py  baseline_optimization.py  contrastive_optimization.py  generate_contrastive_answers.py  registry.json  retrieval_optimization.py  self_judge_optimization.py
learn2rag/pipeline/: .dockerignore  .gitignore  CONFIG_PARAMS.md  __init__.py  __main__.py  app.py  authorization.py  authorization_filter.py  authorization_sharepoint.py  config.py  docker-compose.yml  embeddings.py  eval_search.py  generate.py  ingestion.py  json_loader.py  llm.py  loaded_documents.json  logging.yaml  main.py  old_loaders.py  opt_config.json  prov.py  pyproject.toml  qdrant.py  qdrant_hybrid.py  rewrite.py  run_eval.py  search.py  store.py  user_config.json
learn2rag/pipeline/data/: get_repliqa_pdfs.py  load_kcenter.py  load_kcenter_dump.py
learn2rag/pipeline/operators/: __init__.py  base.py  basic_pipeline.py  example.py  example_pipeline.py  generation.py  search.py
learn2rag/pipeline/prompts/: prompt1.json
learn2rag/pipeline/scripts/: eval_search.py  index-cars  query-cranes  run_eval.py
learn2rag/pipeline/tests/: docker-compose.test.yml  loaded_documents.json  test_embeddings.py  test_generate.py  test_ingestion.py  test_misc.py  test_search.py
learn2rag/pipeline/tests/queries/: aiact.csv  aifaq.csv  dice.csv  hares.csv
learn2rag/tests/: test_learn2rag.py
learn2rag/tests/data/: rabbits.txt
learn2rag/ui/: README.org  __init__.py  config.yml  main.py  messages.pot
learn2rag/ui/static/: main.css
learn2rag/ui/templates/: _pipelines_list_table.html  base.html  firststeps.html  firststeps_models.html  firststeps_pipelines.html  firststeps_sources.html  footer.html  logs.html  model_pulling.html  model_pulling_failure.html  model_pulling_success.html  models_add.html  models_list.html  models_page.html  pipelines_add.html  pipelines_details_page.html  pipelines_list.html  pipelines_page.html  ps_list.html  sources_add.html  sources_add_drupal.html  sources_add_local.html  sources_add_sharepoint.html  sources_add_web.html  sources_list.html  sources_page.html  start.html
learn2rag/ui/templates/compose/: import.yml  pipeline.yml
learn2rag/ui/templates/compose/components/: ollama-download.yml  ollama.yml
learn2rag/ui/templates/compose/pipelines/: continuous.yml  import.yml  import.yml.j2  optimization.yml  pipeline.yml  pipeline.yml.j2
learn2rag/ui/tests/: test_misc.py
learn2rag/ui/translations/de/LC_MESSAGES/: messages.po
learn2rag/utils/: __init__.py
learn2rag/utils/tests/: test_utils.py
loaders/: directory_loader.py  html_loader.py  process_loaders.py
open-webui-pipelines/: langgraph_stream_pipeline.py
prompts/langsmithhub/rlm/: rag-prompt-llama.json  rag-prompt-llama3.json  rag-prompt.json
qdrant/: config.yml
scripts/: aiact  aifaq  example  example-inmemory-run  example-redis-index  example-redis-run  index-aiact  index-cranes  index-hares  query-aiact  query-aifaq  query-cars  query-cranes  query-hares
services/: install-ollama  install-open-webui  install-open-webui-pipelines  install-qdrant  open-webui-pipelines-build  open-webui-pipelines-start  setup-open-webui  start-basic-pipeline  start-basic-pipeline.py  start-import  start-import-auto.py  start-import.bundle  start-import.linux  start-import.py  start-import.windows.bat  start-open-webui  start-open-webui-pipelines  start-open-webui-pipelines.py  start-open-webui.py  start-redis
tests/queries/: wikibooks.csv
