[project]
authors = [
    {name = "Carolin Walter",email = "carolin.walter@usu.com"}
]
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "build==1.3.0",
    "colorlog (>=6.9.0,<7.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "fastapi (==0.115.11)",
    "flagembedding (>=1.3.5,<2.0.0)",
    "Flask>=3.1.1",
    "Flask-Babel>=4.0.0",
    "httpx[socks] (>=0.28.1,<0.29.0)",
    "huggingface-hub (>=0.34.3,<0.35.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jq (>=1.10.0,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "langchain-ollama (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langgraph (>=0.6.4,<0.7.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "lxml-stubs (>=0.5.1,<0.6.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "ollama>=0.5.1",
    "pandas (>=2.3.1,<3.0.0)",
    "psutil>=7.0.0",
    "pypdf (>=5.8.0,<6.0.0)",
    "pyxdg",
    "pyyaml (>=6.0.2,<7.0.0)",
    "qdrant-client (>=1.14.3,<1.16.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "simsimd (>=6.5.0,<7.0.0)",
    "types-pyyaml (>=6.0.12.20250516,<7.0.0.0)",
    "uvicorn (==0.34.0)",
]
description = ""
name = "learn2rag"
requires-python = "==3.13.5"
version = "0.1.0"
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 77.0.3"]
[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"*" = ["**/*"]
[tool.setuptools.packages.find]
include = ["learn2rag*"]
namespaces = false
where = ["."]
