[project]
authors = [
    {name = "Carolin Walter",email = "carolin.walter@usu.com"}
]
dependencies = [
    "accelerate==1.10.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "build==1.3.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "colorlog (>=6.9.0,<7.0.0)",
    "contourpy==1.3.3",
    "cryptography==45.0.6",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "datasets (>=4.0.0,<5.0.0)",
    "Deprecated==1.2.18",
    "effdet==0.4.1",
    "emoji==2.14.1",
    "fastapi (==0.115.11)",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flagembedding (>=1.3.5,<2.0.0)",
    "Flask>=3.1.1",
    "Flask-Babel>=4.0.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.0",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "google-api-core==2.25.1",
    "googleapis-common-protos==1.70.0",
    "google-auth==2.40.3",
    "google-cloud-vision==3.10.2",
    "greenlet==3.2.4",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx[socks] (>=0.28.1,<0.29.0)",
    "httpx-sse==0.4.1",
    "huggingface-hub (>=0.34.4,<0.35.0)",
    "humanfriendly==10.0",
    "idna==3.10",
    "ipykernel (>=6.29.5,<7.0.0)",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "jq (>=1.10.0,<2.0.0)",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "json-stream==2.4.1",
    "keyboard==0.13.5",
    "kiwisolver==1.4.9",
    "langchain==0.3.27",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "langchain-ollama (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langchain-text-splitters==0.3.9",
    "langdetect==1.0.9",
    "langgraph (>=0.6.4,<0.7.0)",
    "langsmith==0.4.13",
    "lxml (>=6.0.0,<7.0.0)",
    "lxml-stubs (>=0.5.1,<0.6.0)",
    "Markdown==3.8.2",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.5",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "mypy (>=1.17.0,<2.0.0)",
    "mypy_extensions==1.1.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==2.2.6",
    "olefile==0.47",
    "ollama>=0.5.1",
    "omegaconf==2.3.0",
    "onnx==1.18.0",
    "onnxruntime==1.22.1",
    "opencv-python==4.12.0.88",
    "orjson==3.11.1",
    "packaging==25.0",
    "pandas (>=2.3.1,<3.0.0)",
    "pdf2image==1.17.0",
    "pdfminer.six==20250506",
    "pi_heif==1.1.0",
    "pikepdf==9.10.2",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "proto-plus==1.26.1",
    "psutil>=7.0.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycocotools==2.0.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pydantic-settings==2.10.1",
    "pypandoc==1.15",
    "pyparsing==3.2.3",
    "pypdf (>=5.9.0,<6.0.0)",
    "pypdfium2==4.30.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14; sys_platform == 'win32'",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "pytest (>=9.0.2,<10.0.0)",
    "pytz==2025.2",
    "pywin32 ; sys_platform == 'win32'",
    "pyxdg",
    "pyyaml (>=6.0.2,<7.0.0)",
    "qdrant-client (>=1.14.3,<1.16.0)",
    "RapidFuzz==3.13.0",
    "regex==2025.7.34",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scipy==1.16.1",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "setuptools==80.9.0",
    "simsimd (>=6.5.0,<7.0.0)",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "SQLAlchemy==2.0.42",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "timm==1.0.19",
    "tokenizers==0.21.4",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "transformers==4.55.0",
    "types-pyyaml (>=6.0.12.20250516,<7.0.0.0)",
    "typing_extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unstructured[pptx] (>=0.18.27,<0.19.0)",
    "unstructured-client==0.42.2",
    "unstructured[docx]",
    "unstructured-inference==1.1.6",
    "unstructured[md]",
    "unstructured[odt]",
    "unstructured[pdf]",
    "unstructured.pytesseract==0.3.15",
    "unstructured[rtf]",
    "unstructured[web]",
    "unstructured[xml]",
    "urllib3==2.5.0",
    "uvicorn (==0.34.0)",
    "webencodings==0.5.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zstandard==0.23.0",
    "o365 (>=2.1.8,<3.0.0)",
    "azure-identity (>=1.25.1,<2.0.0)",
    "msal (>=1.34.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "types-psutil (>=7.2.2.20260130,<8.0.0.0)",
    "types-pyxdg (>=0.28.0.20251115,<0.29.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
]
description = ""
name = "learn2rag"
requires-python = "==3.13.5"
version = "0.1.0"
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 77.0.3"]
[tool.pytest.ini_options]
strict = true
testpaths = "learn2rag"
[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"*" = ["**/*"]
[tool.setuptools.packages.find]
include = ["learn2rag*"]
namespaces = false
where = ["."]

[dependency-groups]
dev = [
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)"
]
