[project]
authors = [
    {name = "Carolin Walter",email = "carolin.walter@usu.com"}
]
dependencies = [
    "accelerate==1.10.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.10.0",
    "apscheduler==3.11.2",
    "attrs==25.3.0",
    "azure-identity==1.25.3",
    "backoff==2.2.1",
    "beautifulsoup4==4.14.3",
    "build==1.3.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.6",
    "click==8.2.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "colorlog==6.10.1",
    "contourpy==1.3.3",
    "cryptography==45.0.6",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "datasets==4.8.4",
    "deprecated==1.2.18",
    "ebooklib==0.20",
    "effdet==0.4.1",
    "emoji==2.15.0",
    "fastapi==0.115.11",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flagembedding==1.3.5",
    "flask==3.1.3",
    "flask-babel==4.0.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.0",
    "frozenlist==1.7.0",
    "fsspec==2025.7.0",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-vision==3.10.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx[socks]==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.34.6",
    "humanfriendly==10.0",
    "idna==3.10",
    "ipykernel==6.31.0",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jq==1.11.0",
    "json-stream==2.4.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "keyboard==0.13.5",
    "kiwisolver==1.4.9",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.83",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.10",
    "langchain-openai==0.3.35",
    "langchain-qdrant==0.2.1",
    "langchain-text-splitters==0.3.9",
    "langdetect==1.0.9",
    "langgraph==0.6.11",
    "langsmith==0.4.13",
    "lxml==6.0.2",
    "lxml-stubs==0.5.1",
    "markdown==3.8.2",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib==3.10.5",
    "mpmath==1.3.0",
    "msal==1.35.1",
    "msgraph-sdk==1.54.0",
    "msoffcrypto-tool==6.0.0",
    "multidict==6.6.4",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==2.2.6",
    "o365==2.1.9",
    "olefile==0.47",
    "ollama==0.6.1",
    "omegaconf==2.3.0",
    "onnx==1.18.0",
    "onnxruntime==1.22.1",
    "opencv-python==4.12.0.88",
    "openpyxl==3.1.5",
    "orjson==3.11.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-stubs==3.0.0.260204",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pi-heif==1.1.0",
    "pikepdf==9.10.2",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "psutil==7.2.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycocotools==2.0.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pypandoc==1.15",
    "pyparsing==3.2.3",
    "pypdf==5.9.0",
    "pypdfium2==4.30.0",
    "pyreadline3==3.5.4",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-iso639==2026.1.31",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pyxdg==0.28",
    "pyyaml==6.0.3",
    "qdrant-client==1.17.1",
    "rapidfuzz==3.14.3",
    "regex==2025.7.34",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scipy==1.16.1",
    "sentence-transformers==5.3.0",
    "setuptools==80.9.0",
    "simsimd==6.5.16",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.42",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "timm==1.0.19",
    "tokenizers==0.21.4",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.3",
    "transformers==4.55.0",
    "types-psutil==7.2.2.20260130",
    "types-pyxdg==0.28.0.20251115",
    "types-pyyaml==6.0.12.20250915",
    "types-requests==2.32.4.20260324",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "unstructured[docx, epub, odt, rtf]==0.21.5",
    "unstructured-client==0.42.2",
    "unstructured-inference==1.1.6",
    "unstructured-pytesseract==0.3.15",
    "urllib3==2.5.0",
    "uvicorn==0.34.0",
    "webencodings==0.5.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zstandard==0.23.0",
]
description = ""
license = "MIT"
name = "learn2rag"
requires-python = "==3.13.5"
version = "0.3.0.dev0"
[project.urls]
Homepage = "https://learn2rag.de/"
Documentation = "https://docs.learn2rag.de/"
Repository = "https://github.com/Learn2RAG/configurator.git"
Issues = "https://github.com/Learn2RAG/configurator/issues"
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 77.0.3"]
[tool.mypy]
files = "learn2rag"
exclude = [
    "^learn2rag/pipeline/scripts/",
    "^learn2rag/pipeline/main\\.py$",
]
strict = true
[[tool.mypy.overrides]]
module = [
    "datasets.*",
]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["learn2rag.pipeline.main"]
ignore_errors = true
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
strict = true
testpaths = "learn2rag"
[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"*" = ["**/*"]
[tool.setuptools.packages.find]
include = ["learn2rag*"]
namespaces = false
where = ["."]
[dependency-groups]
dev = [
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)"
]
